test/asm/invalid-alignment.asm
; invalid

SECTION "a", ROMX[$4000], ALIGN[20]

SECTION FRAGMENT "b", ROM0[$0000], ALIGN[20]

SECTION UNION "c", WRAM0[$c000], ALIGN[20]

; unattainable

SECTION "d", HRAM[$ff80], ALIGN[10]

SECTION FRAGMENT "e", ROMX[$4000], ALIGN[15]

SECTION UNION "f", WRAM0[$c000], ALIGN[15]
